nur noch bilder centern

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="row">
           <div class="intro-text">
             <h1>Il Gusto</h1>
-            <p>Reistorante Pizzeria</p>
+            <p>Ristorante Pizzeria</p>
            <!-- <a href="#about" class="btn btn-custom btn-lg page-scroll">Discover Story</a> </div>-->
         </div>
       </div>
@@ -77,7 +77,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-md-6 ">
-        <div class="about-img"><img src="img/about.jpg" class="img-responsive" alt=""></div>
+        <div class="about-img"><img src="img/Ilgusto/3.jpg" class="img-responsive" alt=""></div>
       </div>
       <div class="col-xs-12 col-md-6">
         <div class="about-text">
@@ -716,25 +716,17 @@
               <div class="hover-text">
                 <h4>Antipasto Il Gusto</h4>
               </div>
-              <img src="img/Ilgusto/speisen/Antipasto Il Gusto sm.jpg" class="img-responsive" alt="ntipasto Il Gusto"> </a> </div>
+              <img src="img/Ilgusto/speisen/Antipasto Il Gusto sm.png" class="img-responsive" alt="Antipasto Il Gusto"> </a> </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-4 dinner">
-          <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/Ilgusto/speisen/Café Gourmand.jpg" title="Café Gourmand" data-lightbox-gallery="gallery1">
-              <div class="hover-text">
-                <h4>Café Gourmand</h4>
-              </div>
-              <img src="img/Ilgusto/speisen/Café Gourmand sm.jpg" class="img-responsive" alt="Café Gourmand"> </a> </div>
-          </div>
-        </div>
+
         <div class="col-sm-6 col-md-4 col-lg-4 breakfast">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/Ilgusto/speisen/Caramella al Salmone.jpg" title="Caramella al Salmone" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/Ilgusto/speisen/Caramella al Salmone sm.png" title="Caramella al Salmone" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <h4>Caramella al Salmone</h4>
               </div>
-              <img src="img/Ilgusto/speisen/Caramella al Salmone sm.jpg" class="img-responsive" alt="Caramella al Salmone"> </a> </div>
+              <img src="img/Ilgusto/speisen/Caramella al Salmone sm.png" class="img-responsive" alt="Caramella al Salmone"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4 breakfast">
@@ -743,7 +735,7 @@
               <div class="hover-text">
                 <h4>Carpaccio di Manzo</h4>
               </div>
-              <img src="img/Ilgusto/speisen/Carpaccio di Manzo sm.jpg" class="img-responsive" alt="Carpaccio di Manzo"> </a> </div>
+              <img src="img/Ilgusto/speisen/Carpaccio di Manzo sm.png" class="img-responsive" alt="Carpaccio di Manzo"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4 dinner">
@@ -770,7 +762,7 @@
               <div class="hover-text">
                 <h4>Filetto di Maiale</h4>
               </div>
-              <img src="img/Ilgusto/speisen/Fileto di Maiale sm.jpg" class="img-responsive" alt="Filetto di Maiale"> </a> </div>
+              <img src="img/Ilgusto/speisen/Fileto di Maiale sm.png" class="img-responsive" alt="Filetto di Maiale"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4 lunch">
@@ -800,22 +792,13 @@
               <img src="img/Ilgusto/speisen/graved lachs sm.png" class="img-responsive" alt="Graved Lachs"> </a> </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-4 dinner">
-          <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/Ilgusto/speisen/panna cotta.jpg" title="Panna Cotta" data-lightbox-gallery="gallery1">
-              <div class="hover-text">
-                <h4>Panna Cotta</h4>
-              </div>
-              <img src="img/Ilgusto/speisen/panna cotta sm.jpg" class="img-responsive" alt="Panna Cotta"> </a> </div>
-          </div>
-        </div>
         <div class="col-sm-6 col-md-4 col-lg-4 breakfast">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/Ilgusto/speisen/Quinoa con Mozzarella.jpg" title="Quinoa con Mozzarella" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <h4>Quinoa con Mozzarella</h4>
               </div>
-              <img src="img/Ilgusto/speisen/Quinoa con Mozzarella sm.jpg" class="img-responsive" alt="Quinoa con Mozzarella"> </a> </div>
+              <img src="img/Ilgusto/speisen/Quinoa con Mozzarella sm.png" class="img-responsive" alt="Quinoa con Mozzarella"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4 breakfast">
@@ -824,7 +807,7 @@
               <div class="hover-text">
                 <h4>Ravioli di Vitello</h4>
               </div>
-              <img src="img/Ilgusto/speisen/Ravioli di Vitello sm.png.jpg" class="img-responsive" alt="Ravioli di Vitello"> </a> </div>
+              <img src="img/Ilgusto/speisen/Ravioli di Vitello sm.png" class="img-responsive" alt="Ravioli di Vitello"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4 breakfast">
@@ -833,7 +816,7 @@
               <div class="hover-text">
                 <h4>Ravioli di Vitello</h4>
               </div>
-              <img src="img/Ilgusto/speisen/Ravioli di Vitello sm.jpg" class="img-responsive" alt="Ravioli di Vitello"> </a> </div>
+              <img src="img/Ilgusto/speisen/Ravioli di Vitello sm.png" class="img-responsive" alt="Ravioli di Vitello"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4 breakfast">
@@ -842,7 +825,7 @@
               <div class="hover-text">
                 <h4>Spaghetti Gamberi ( Aglio Olio)</h4>
               </div>
-              <img src="img/Ilgusto/speisen/Spaghetti Gamberi ( Aglio Olio) sm.jpg" class="img-responsive" alt="Spaghetti Gamberi ( Aglio Olio)"> </a> </div>
+              <img src="img/Ilgusto/speisen/Spaghetti Gamberi ( Aglio Olio) sm.png" class="img-responsive" alt="Spaghetti Gamberi ( Aglio Olio)"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4 breakfast">
@@ -851,7 +834,7 @@
               <div class="hover-text">
                 <h4>Tagliatelle con Spinaci</h4>
               </div>
-              <img src="img/Ilgusto/speisen/Tagliatelle con Spinaci sm.jpg" class="img-responsive" alt="Tagliatelle con Spinaci"> </a> </div>
+              <img src="img/Ilgusto/speisen/Tagliatelle con Spinaci sm.png" class="img-responsive" alt="Tagliatelle con Spinaci"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4 breakfast">
@@ -860,7 +843,7 @@
               <div class="hover-text">
                 <h4>Tortelloni al Sedano</h4>
               </div>
-              <img src="img/Ilgusto/speisen/Tortelloni al Sedano sm.jpg" class="img-responsive" alt="Tortelloni al Sedano"> </a> </div>
+              <img src="img/Ilgusto/speisen/Tortelloni al Sedano sm.png" class="img-responsive" alt="Tortelloni al Sedano"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4 breakfast">
@@ -870,6 +853,24 @@
                 <h4>Variazione del Sorbetto</h4>
               </div>
               <img src="img/Ilgusto/speisen/Variazione del Sorbetto sm.jpg"  class="img-responsive" alt="Variazione del Sorbetto"> </a> </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-4 dinner">
+          <div class="portfolio-item">
+            <div class="hover-bg"> <a href="img/Ilgusto/speisen/Café Gourmand.jpg" title="Café Gourmand" data-lightbox-gallery="gallery1">
+              <div class="hover-text">
+                <h4>Café Gourmand</h4>
+              </div>
+              <img src="img/Ilgusto/speisen/Café Gourmand sm.jpg" class="img-responsive" alt="Café Gourmand"> </a> </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-4 dinner">
+          <div class="portfolio-item">
+            <div class="hover-bg"> <a href="img/Ilgusto/speisen/panna cotta.jpg" title="Panna Cotta" data-lightbox-gallery="gallery1">
+              <div class="hover-text">
+                <h4>Panna Cotta</h4>
+              </div>
+              <img src="img/Ilgusto/speisen/panna cotta sm.png" class="img-responsive" alt="Panna Cotta"> </a> </div>
           </div>
         </div>
       </div>
@@ -952,7 +953,7 @@
           <p class="help-block text-danger"></p>
         </div>
         <div id="success"></div>
-        <button type="submit" class="btn btn-custom btn-lg">Senden</button>
+        <button type="submit" class="btn btn-custom btn-lg" style="margin-bottom: 10%">Senden</button>
       </form>      
     </div>
   </div>
