--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <h2>Speisekarte</h2>
       <hr>
       <p>Lassen Sie sich von unseren kulinarischen Köstlichkeiten verführen. Unsere Speisekarte bietet eine Vielfalt an authentischen mediterranen Gerichten – von frischen Salaten bis hin zu handgefertigten Pastavariationen und erlesenen Fleisch- und Fischspezialitäten. Jedes Gericht erzählt die Geschichte der italienischen Küche, gewürzt mit einer Prise moderner Kreativität.</p>
-      <h3>Zusätzlich zu unserer festen Speisekarte finden sie bei uns vor Ort noch unsere Tafel mit frischen, Wöchentlich neuen Gerichten</h3>
+      <h3>Entdecken Sie neben unserer ständigen Speisekarte auch unsere wöchentlich wechselnde Tafel mit frischen Gerichten, die direkt vor Ort für Sie bereitsteht</h3>
     </div>    
   </div>
   <div class="container">
