--- a/index.html
+++ b/index.html
@@ -476,9 +476,12 @@
             <div class="menu-item">
                 <div class="menu-item-name">Pizza al Salmone</div>
                 <div class="menu-item-price">14 €</div>
-
                 <div class="menu-item-description">Frisches Lachsfilet / Spinat / Olivenöl</div>
             </div>
+            <div class="menu-item">
+              <div class="menu-item-name">Pizza nach Wunsch</div>
+              <div class="menu-item-price">Auf Anfrage</div>
+          </div>
         </div>
         <div class="menu-section">
           <h2 class="menu-section-title">Hauptspeisen</h2>
