--- a/index.html
+++ b/index.html
@@ -926,6 +926,7 @@
 <div id="call-reservation" class="text-center">
   <div class="container">
     <h2>Wollen sie reservieren?  <strong>+49 6805 9439490</strong></h2>
+    <p>In unserem neu eröffneten Restaurant finden Sie den idealen Ort für Ihre Familienfeiern. In unserem modernen und einladenden Ambiente können Sie mit bis zu 35-40 Personen besondere Anlässe wie Geburtstage und Hochzeiten feiern. Unser erfahrenes Event-Team steht Ihnen mit Freude zur Seite, um Ihre Veranstaltung perfekt zu planen und zu gestalten.</p>
   </div>
 </div>
 <!-- Contact Section -->
