--- a/index.html
+++ b/index.html
@@ -925,8 +925,9 @@
 <!-- Call Reservation Section -->
 <div id="call-reservation" class="text-center">
   <div class="container">
+    <h5>In unserem neu eröffneten Restaurant finden Sie den idealen Ort für Ihre Familienfeiern. In unserem modernen und einladenden Ambiente können Sie mit bis zu 35-40 Personen besondere Anlässe wie Geburtstage und Hochzeiten feiern. Unser erfahrenes Event-Team steht Ihnen mit Freude zur Seite, um Ihre Veranstaltung perfekt zu planen und zu gestalten.</h5>
+    <hr>
     <h2>Wollen sie reservieren?  <strong>+49 6805 9439490</strong></h2>
-    <p>In unserem neu eröffneten Restaurant finden Sie den idealen Ort für Ihre Familienfeiern. In unserem modernen und einladenden Ambiente können Sie mit bis zu 35-40 Personen besondere Anlässe wie Geburtstage und Hochzeiten feiern. Unser erfahrenes Event-Team steht Ihnen mit Freude zur Seite, um Ihre Veranstaltung perfekt zu planen und zu gestalten.</p>
   </div>
 </div>
 <!-- Contact Section -->
@@ -935,7 +936,7 @@
     <div class="section-title text-center">
       <h2>Kontaktformular</h2>
       <hr>
-      <p>Für reservationen oder sonstige Fragen kontaktieren sie uns bitte</p>
+      <p>Für Reservierungen oder sonstige Fragen kontaktieren sie uns bitte</p>
     </div>
     <div class="col-md-10 col-md-offset-1">
       <form name="sentMessage" id="contactForm" novalidate>
