--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <h2>Speisekarte</h2>
       <hr>
       <p>Lassen Sie sich von unseren kulinarischen Köstlichkeiten verführen. Unsere Speisekarte bietet eine Vielfalt an authentischen mediterranen Gerichten – von frischen Salaten bis hin zu handgefertigten Pastavariationen und erlesenen Fleisch- und Fischspezialitäten. Jedes Gericht erzählt die Geschichte der italienischen Küche, gewürzt mit einer Prise moderner Kreativität.</p>
-      <h3>Entdecken Sie neben unserer ständigen Speisekarte auch unsere wöchentlich wechselnde Tafel mit frischen Gerichten, die direkt vor Ort für Sie bereitsteht</h3>
+      <h4>Entdecken Sie neben unserer ständigen Speisekarte auch unsere wöchentlich wechselnde Tafel mit frischen Gerichten, die direkt vor Ort für Sie bereitsteht</h4>
     </div>    
   </div>
   <div class="container">
@@ -711,7 +711,7 @@
         <div class="clearfix"></div>
       </div>
     </div>-->
-    <div class="row">
+    <!--<div class="row">-->
       <div class="portfolio-items">
         <div class="col-sm-6 col-md-4 col-lg-4 breakfast">
           <div class="portfolio-item">
@@ -877,7 +877,7 @@
           </div>
         </div>
       </div>
-    </div>
+    <!--</div>-->
   </div>
 </div>
 <!-- Team Section -->
