--- a/public/index.html
+++ b/public/index.html
@@ -214,7 +214,7 @@
                         <div class="menu-item-price">3 €</div>
                     </div>
                     <div class="menu-item">
-                        <div class="menu-item-name">Eis Tee</div>
+                        <div class="menu-item-name">Eistee</div>
                         <div class="menu-item-price">3.50 €</div>
                     </div>
                     <div class="menu-item">
