--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
             <li><a href="#restaurant-menu" class="page-scroll">Speisekarte</a></li>
             <li><a href="#portfolio" class="page-scroll">Galerie</a></li>
             <!--<li><a href="#team" class="page-scroll">Team</a></li>-->
-            <li><a href="#call-reservation" class="page-scroll">Kontakt</a></li>
+            <!--<li><a href="#call-reservation" class="page-scroll">Kontakt</a></li>-->
           </ul>
         </div>
         <!-- /.navbar-collapse --> 
@@ -922,13 +922,14 @@
     </div>-->
     <!-- Call Reservation Section -->
     <div id="call-reservation" class="text-center">
-      <div class="container">
+      <div class="container" style="padding-bottom: 10px;">
         <h5>In unserem neu eröffneten Restaurant finden Sie den idealen Ort für Ihre Familienfeiern. In unserem modernen und einladenden Ambiente können Sie mit bis zu 35-40 Personen besondere Anlässe wie Geburtstage und Hochzeiten feiern. Unser erfahrenes Event-Team steht Ihnen mit Freude zur Seite, um Ihre Veranstaltung perfekt zu planen und zu gestalten.</h5>
         <hr>
         <h2>Wollen sie reservieren?  <strong>+49 6805 9439490</strong></h2>
       </div>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2611.532630418169!2d7.05511261246522!3d49.1145186825279!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479435d15c828ee1%3A0x259d132097e4ce16!2sRistorante%20Il%20Gusto!5e0!3m2!1sde!2sde!4v1699108280531!5m2!1sde!2sde" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
-    <!-- Contact Section -->
+    <!-- Contact Section
     <div id="contact" class="text-center">
       <div class="container">
         <div class="section-title text-center">
@@ -960,9 +961,8 @@
             <button type="submit" class="btn btn-custom btn-lg" style="margin-bottom: 10%">Senden</button>
           </form>      
         </div>
-      </div>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2611.532630418169!2d7.05511261246522!3d49.1145186825279!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479435d15c828ee1%3A0x259d132097e4ce16!2sRistorante%20Il%20Gusto!5e0!3m2!1sde!2sde!4v1699108280531!5m2!1sde!2sde" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
+      </div> -->
+    <!--</div>-->
     
     
     <div id="footer">
