--- a/public/index.html
+++ b/public/index.html
@@ -977,7 +977,8 @@
         <div class="col-md-4">
           <h3>Öffnungszeiten</h3>
           <div class="contact-item">
-            <p>Mon-Son: 12:00 - 14:00 & 18:00 - 21:30</p>
+            <p>Mon-Fr & Son: 12:00 - 14:00 & 18:00 - 21:30</p>
+            <p>Sam: 18:00-21:30</p>
             <p>Mittwoch Ruhetag</p>
           </div>
         </div>
