--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <script src="https://cdn.websitepolicies.io/lib/cconsent/cconsent.min.js" defer></script><script>window.addEventListener("load",function(){window.wpcb.init({"border":"thin","corners":"small","colors":{"popup":{"background":"#f6f6f6","text":"#000000","border":"#555555"},"button":{"background":"#555555","text":"#ffffff"}},"content":{"message":"Diese Webseite benutzt Cookies","link":"Mehr","href":"ilgusto-sb.de/impressum","button":"Ok"}})});</script>
 </head>
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 <!-- Navigation
@@ -978,15 +979,17 @@
     <div class="col-md-4">
       <h3>Öffnungszeiten</h3>
       <div class="contact-item">
-        <p>Mon-Son: 12:00 - 14:00 & 18:00 - 21:30</p>
+        <p>Mon-Fr & Son: 12:00 - 14:00 & 18:00 - 21:30</p>
+        <p>Sam: 18:00-21:30</p>
         <p>Mittwoch Ruhetag</p>
       </div>
+      <a href="impressum.html"></a>
     </div>
     <div class="col-md-4">
       <h3>Kontakt</h3>
       <div class="contact-item">
         <p>Telefon: +49 6805 9439490</p>
-        <p>Email: mail@ilgusto-sb.de</p>
+        <p>Email: <a href="mailto:mail@ilgusto-sb.de">mail@ilgusto-sb.de</a></p>
       </div>
     </div>
   </div>
