--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
         <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
       <![endif]-->
+      <script src="https://cdn.websitepolicies.io/lib/cconsent/cconsent.min.js" defer></script><script>window.addEventListener("load",function(){window.wpcb.init({"border":"thin","corners":"small","colors":{"popup":{"background":"#f6f6f6","text":"#000000","border":"#555555"},"button":{"background":"#555555","text":"#ffffff"}},"content":{"message":"Diese Webseite benutzt Cookies","link":"Mehr","href":"/impressum","button":"Ok"}})});</script>
   </head>
   <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
     <!-- Navigation
@@ -814,15 +815,6 @@
             </div>
             <div class="col-sm-6 col-md-4 col-lg-4 breakfast">
               <div class="portfolio-item">
-                <div class="hover-bg"> <a href="img/Ilgusto/speisen/Ravioli di Vitello.jpg" title="Ravioli di Vitello" data-lightbox-gallery="gallery1">
-                  <div class="hover-text">
-                    <h4>Ravioli di Vitello</h4>
-                  </div>
-                  <img src="img/Ilgusto/speisen/Ravioli di Vitello sm.png" class="img-responsive" alt="Ravioli di Vitello"> </a> </div>
-              </div>
-            </div>
-            <div class="col-sm-6 col-md-4 col-lg-4 breakfast">
-              <div class="portfolio-item">
                 <div class="hover-bg"> <a href="img/Ilgusto/speisen/Spaghetti Gamberi ( Aglio Olio).jpg" title="Spaghetti Gamberi ( Aglio Olio)" data-lightbox-gallery="gallery1">
                   <div class="hover-text">
                     <h4>Spaghetti Gamberi ( Aglio Olio)</h4>
@@ -978,15 +970,16 @@
           <h3>Öffnungszeiten</h3>
           <div class="contact-item">
             <p>Mon-Fr & Son: 12:00 - 14:00 & 18:00 - 21:30</p>
-            <p>Sam: 18:00-21:30</p>
+            <p>Sam: 18:00-22:00</p>
             <p>Mittwoch Ruhetag</p>
           </div>
+          <a href="impressum.html"></a>
         </div>
         <div class="col-md-4">
           <h3>Kontakt</h3>
           <div class="contact-item">
             <p>Telefon: +49 6805 9439490</p>
-            <p>Email: mail@ilgusto-sb.de</p>
+            <p>Email: <a href="mailto:mail@ilgusto-sb.de">mail@ilgusto-sb.de</a></p>
           </div>
         </div>
       </div>
