muss noch impressum einbinden

--- a/public/index.html
+++ b/public/index.html
@@ -172,7 +172,7 @@
                     <hr>
                     <div class="menu-item">
                         <div class="menu-item-name">San Pellegrino 0.25 / 0.7l</div>
-                        <div class="menu-item-price">2.50€/6 €</div>
+                        <div class="menu-item-price">2.50 €/6 €</div>
                     </div>
                     <div class="menu-item">
                         <div class="menu-item-name">Aqua Panna 0.5l</div>
@@ -192,19 +192,19 @@
                     </div>
                     <div class="menu-item">
                         <div class="menu-item-name">Apfelschorle 0.25l / 0.4l</div>
-                        <div class="menu-item-price">2.50€/3.50 €</div>
+                        <div class="menu-item-price">2.50 €/3.50 €</div>
                     </div>
                     <div class="menu-item">
                         <div class="menu-item-name">Johannisbeerschorle 0.25l / 0.4l</div>
-                        <div class="menu-item-price">2.50€/3.50 €</div>
+                        <div class="menu-item-price">2.50 €/3.50 €</div>
                     </div>
                     <div class="menu-item">
                         <div class="menu-item-name">Cola/Zero / Light 0.25l / 0.4l</div>
-                        <div class="menu-item-price">2.50€/3.50 €</div>
+                        <div class="menu-item-price">2.50 €/3.50 €</div>
                     </div>
                     <div class="menu-item">
                         <div class="menu-item-name">Fanta / Sprite 0.25l / 0.4l</div>
-                        <div class="menu-item-price">2.50€/3.50 €</div>
+                        <div class="menu-item-price">2.50 €/3.50 €</div>
                     </div>
                     <div class="menu-item">
                         <div class="menu-item-name">Bitter Lemon 0.2l Fl</div>
@@ -232,15 +232,15 @@
                   <hr>
                   <div class="menu-item">
                       <div class="menu-item-name">Ur Pils Vom Fass 0.25l / 0.4l</div>
-                      <div class="menu-item-price">2.50€/3.50 €</div>
+                      <div class="menu-item-price">2.50 €/3.50 €</div>
                   </div>
                   <div class="menu-item">
                       <div class="menu-item-name">Cola Bier 0.25l / 0.4l</div>
-                      <div class="menu-item-price">2.50€/3.50 €</div>
+                      <div class="menu-item-price">2.50 €/3.50 €</div>
                   </div>
                   <div class="menu-item">
                       <div class="menu-item-name">Radler 0.25l / 0.4l</div>
-                      <div class="menu-item-price">2.50€/3.50 €</div>
+                      <div class="menu-item-price">2.50 €/3.50 €</div>
                   </div>
                   <div class="menu-item">
                       <div class="menu-item-name">Weizen Hell / Alkoholfrei</div>
@@ -298,11 +298,11 @@
                   <h3>Rot</h3>
                   <div class="menu-item">
                       <div class="menu-item-name">Primitivo Due Palme 0.25l</div>
-                      <div class="menu-item-price">7.50€</div>
+                      <div class="menu-item-price">7.50 €</div>
                   </div>
                   <div class="menu-item">
                       <div class="menu-item-name">Chianti Classico 0.25l</div>
-                      <div class="menu-item-price">6.50€</div>
+                      <div class="menu-item-price">6.50 €</div>
                   </div>
                   <div class="menu-item">
                       <div class="menu-item-name">Montepulciano D'abruzzo 0.25l</div>
@@ -345,7 +345,7 @@
                       <div class="menu-item-name">Carpaccio di Barbabietola</div>
                       <div class="menu-item-price">13.50 €</div>
     
-                      <div class="menu-item-description">Rote Beete / Karamellisierte Ziegenkäse/Mango</div>
+                      <div class="menu-item-description">Rote Beete / Karamellisierter Ziegenkäse / Mango</div>
                   </div>
                   <div class="menu-item">
                       <div class="menu-item-name">Vitello Tonnato</div>
