--- a/public/index.html
+++ b/public/index.html
@@ -973,7 +973,7 @@
             <p>Sam: 18:00-22:00</p>
             <p>Mittwoch Ruhetag</p>
           </div>
-          <a href="impressum.html"></a>
+          <a href="/public/impressum.html"></a>
         </div>
         <div class="col-md-4">
           <h3>Kontakt</h3>
