--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <script src="https://cdn.websitepolicies.io/lib/cconsent/cconsent.min.js" defer></script><script>window.addEventListener("load",function(){window.wpcb.init({"border":"thin","corners":"small","colors":{"popup":{"background":"#f6f6f6","text":"#000000","border":"#555555"},"button":{"background":"#555555","text":"#ffffff"}},"content":{"message":"Diese Webseite benutzt Cookies","link":"Mehr","href":"ilgusto-sb.de/impressum","button":"Ok"}})});</script>
+    <script src="https://cdn.websitepolicies.io/lib/cconsent/cconsent.min.js" defer></script><script>window.addEventListener("load",function(){window.wpcb.init({"border":"thin","corners":"small","colors":{"popup":{"background":"#f6f6f6","text":"#000000","border":"#555555"},"button":{"background":"#555555","text":"#ffffff"}},"content":{"message":"Diese Webseite benutzt Cookies","link":"Mehr","href":"/impressum.html","button":"Ok"}})});</script>
 </head>
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 <!-- Navigation
@@ -983,7 +983,7 @@
         <p>Sam: 18:00-21:30</p>
         <p>Mittwoch Ruhetag</p>
       </div>
-      <a href="impressum.html"></a>
+      <a href="/impressum.html"></a>
     </div>
     <div class="col-md-4">
       <h3>Kontakt</h3>
@@ -1025,8 +1025,8 @@
   // For Firebase JS SDK v7.20.0 and later, measurementId is optional
   const firebaseConfig = {
     apiKey: "AIzaSyDPDEUEmdHvtxw6EJH1_Ij1z4mg6zc7Sis",
-    //authDomain: "il-gusto-3cb3c.firebaseapp.com",
-    authDomain: "ilgusto-sb.de",
+    authDomain: "il-gusto-3cb3c.firebaseapp.com",
+    //authDomain: "ilgusto-sb.de",
     projectId: "il-gusto-3cb3c",
     storageBucket: "il-gusto-3cb3c.appspot.com",
     messagingSenderId: "691796761220",
