impressum gefixt muss es banner noch einblenden

--- a/index.html
+++ b/index.html
@@ -929,9 +929,11 @@
     <hr>
     <h2>Wollen sie reservieren?  <strong>+49 6805 9439490</strong></h2>
   </div>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2611.532630418169!2d7.05511261246522!3d49.1145186825279!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479435d15c828ee1%3A0x259d132097e4ce16!2sRistorante%20Il%20Gusto!5e0!3m2!1sde!2sde!4v1699108280531!5m2!1sde!2sde" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
 </div>
 <!-- Contact Section -->
-<div id="contact" class="text-center">
+<!--<div id="contact" class="text-center">
   <div class="container">
     <div class="section-title text-center">
       <h2>Kontaktformular</h2>
@@ -963,8 +965,7 @@
       </form>      
     </div>
   </div>
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2611.532630418169!2d7.05511261246522!3d49.1145186825279!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479435d15c828ee1%3A0x259d132097e4ce16!2sRistorante%20Il%20Gusto!5e0!3m2!1sde!2sde!4v1699108280531!5m2!1sde!2sde" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-</div>
+</div>-->
 
 
 <div id="footer">
@@ -983,7 +984,6 @@
         <p>Sam: 18:00-21:30</p>
         <p>Mittwoch Ruhetag</p>
       </div>
-      <a href="/impressum.html"></a>
     </div>
     <div class="col-md-4">
       <h3>Kontakt</h3>
@@ -992,6 +992,10 @@
         <p>Email: <a href="mailto:mail@ilgusto-sb.de">mail@ilgusto-sb.de</a></p>
       </div>
     </div>
+
+  </div>
+  <div class="container text-center">
+    <a href="/impressum.html">Impressum</a>
   </div>
   <!--<div class="container-fluid text-center copyrights">
     <div class="col-md-8 col-md-offset-2">
