--- a/impressum.html
+++ b/impressum.html
@@ -21,6 +21,7 @@
 <!-- Stylesheet
     ================================================== -->
 <link rel="stylesheet" type="text/css"  href="css/style.css">
+<link rel="stylesheet" type="text/css"  href="css/impressum.css">
 <link rel="stylesheet" type="text/css" href="css/nivo-lightbox/nivo-lightbox.css">
 <link rel="stylesheet" type="text/css" href="css/nivo-lightbox/default.css">
 <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700" rel="stylesheet">
@@ -47,7 +48,7 @@
 <nav id="menu" class="navbar navbar-default navbar-fixed-top">
   <div class="container"> 
     <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
+    <div class="navbar-header" style="float:right">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
       <a class="navbar-brand page-scroll" href="index.html">Il Gusto</a> </div>
     
@@ -65,7 +66,7 @@
 </nav>
 
 <!-- About Section -->
-<div id="impressum">
+<div id="impressum" style="margin-top:71px">
     <h1>Impressum</h1>
     <p>Sajmir Goga<br />
     Ristorante Il Gusto<br />Saargemünderstraße 45<br />66271 Kleinblittersdorf</p>
